@@ -4494,3 +4494,5 @@ UPDATE `ekzerceroj` SET `respondo` = 'knabino', `normaligita` = 'knabino' WHERE 
 --- correction de coquilles dans les exercices de ppp
 UPDATE `ekzerceroj` SET `demando` = 'Pro la ventego ondoj ĵetiĝis kontraŭ la bordon.', `respondo` = 'Pro la ventego ondoj ĵetiĝis kontraŭ la bordon.', `normaligita` = 'pro la ventego ondoj jxetigxis kontraŭ la bordon' WHERE `ekzerceroj`.`ekzerco_id` = 120 and `ekzerceroj`.`kodo` = 'pp0332';
 UPDATE `ekzerceroj` SET `demando` = 'Nomu, kaj klarigu, la tri internajn elitecojn.' WHERE `ekzerceroj`.`ekzerco_id` = 173 and `ekzerceroj`.`numero` = 13;
+--- correction de coquilles dans les exercices de DLEK
+UPDATE `ekzerceroj` SET `demando` = 'Le frère en bonne santé avait une petite sœur malade.' WHERE `ekzerceroj`.`ekzerco_id` = 6 and `ekzerceroj`.`kodo` = 'ekz02_10' and `ekzerceroj`.`numero` = 10;
